--- a/src/content/blog/vertical-slider.mdx
+++ b/src/content/blog/vertical-slider.mdx
@@ -15,67 +15,16 @@ This article shows how to implement it.
 
 ## Demo
 
-[Show full](/scrap/demo/vertical-slider)
+[\[Click here\]](/scrap/demo/vertical-slider-03)
 
-⚠️ Please scroll inside the iframe.
+### #1: Vertical carousel for page sections with `scroll-snap` CSS property
 
-<iframe
-  src="/scrap/demo/vertical-slider"
-  width="100%"
-  height="600px"
-  frameborder="0"
-  style="border: 3px solid #aaa;"
-/>
+[\[Click here\]](/scrap/demo/vertical-slider-01)
 
-## How it works
+### #2: Inner slider
 
-### Capture wheel events <br/> (includes the children element's events)
+[\[Click here\]](/scrap/demo/vertical-slider-02)
 
-You can capture wheel events in the document, even if the cursor is on the children element.
+### #3: Scroll vertical slider from anywhere
 
-```js
-document.addEventListener(
-  "wheel",
-  (e) => {
-    console.log(`Scroll size (Y): ${e.deltaY}`);
-  },
-  {
-    passive: false,
-    capture: true,
-  },
-);
-```
-
-### Enforce users to scroll slider's contents
-
-```js
-const slider = document.querySelector(".slider");
-const onWheel = (e) => {
-  // slider
-  const sliderRect = slider.getBoundingClientRect();
-  const sliderLastChildRect =
-    slider.lastElementChild!.getBoundingClientRect();
-
-  // wheel speed
-  const { deltaY } = e;
-
-  if (
-    // whether the slider reaching to top of the viewport
-    sliderRect.top <= 0 &&
-    // whether the user is trying to scroll down
-    deltaY > 0 &&
-    // whether all slider content has been scrolled
-    sliderRect.bottom < sliderLastChildRect.bottom
-  ) {
-    e.preventDefault();
-    slider.scrollBy(0, deltaY);
-    return;
-  }
-}
-
-document.addEventListener("wheel", onWheel {
-    passive: false,
-    capture: true,
-  },
-);
-```
+[\[Click here\]](/scrap/demo/vertical-slider-03)
